# arai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.githooks/: post-commit  pre-commit
.github/workflows/: auto-tag.yml  release-prep.yml  release.yml  rust.yml
assets/images/: logo.icns
assets/macos/: info-plist-ext.xml
docs/superpowers/plans/: 2026-03-20-whisper-model-wizard.md  2026-03-21-api-key-keyring.md  2026-03-21-error-display.md  2026-03-21-history-viewer.md  2026-03-21-session-history.md  2026-03-23-linux-support.md
docs/superpowers/specs/: 2026-03-20-whisper-model-wizard-design.md  2026-03-21-api-key-keyring-design.md  2026-03-21-error-display-design.md  2026-03-21-history-viewer-design.md  2026-03-21-session-history-design.md  2026-03-23-linux-support-design.md
scripts/: build.sh  bump-version.sh  release.sh
src/: agent.rs  app.rs  app_state.rs  channels.rs  config.rs  controller.rs  global_hotkey.rs  history.rs  keyring_store.rs  llm.rs  logger.rs  main.rs  messages.rs  model_downloader.rs  openai_connector.rs  recorder.rs  stdin_listener.rs  theme.rs  transcriber.rs  ui.rs
todo/: 01-appstate-lock-ordering.done.txt  01-ui-bypasses-iced-mvu.txt  02-ui-bridge-drops-on-backpressure.done.txt  03-copy-triggers-shutdown.txt  03-recorder-last-chunk-race.done.txt  04-dual-state-stores.txt  05-mutex-for-ownership.txt  05-shutdown-blocks-on-agent.done.txt  06-blocking-stop.txt  07-recorder-double-clone-in-callback.done.txt  10-constructor-spawns-thread.txt  DONE_01-ui-bypasses-iced-mvu.txt  DONE_02-asymmetric-communication.txt  DONE_04-dual-state-stores.txt  DONE_07-println-in-audio-path.txt  DONE_08-infinite-retry.txt  DONE_09-unnecessary-mutex-on-receiver.txt
