[package]
name = "arai"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
whisper-rs = "0.11"
eframe = { version = "0.24", default-features = true }
once_cell = "1.19"
log = "0.4"
simplelog = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
