[package]
name = "arai"
version = "0.14.2"
edition = "2024"

[dependencies]
cpal = "0.17"
whisper-rs = { version = "0.16", features = ["metal"] }
iced = { version = "0.14", features = ["tokio"] }
once_cell = "1.19"
log = "0.4"
simplelog = "0.12"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
global-hotkey = "0.7"
futures = "0.3"
dirs = "6"
keyring = { version = "3", features = ["apple-native"] }
rfd = "0.17"
png = "0.17"

[package.metadata.bundle]
name = "Arai"
identifier = "com.arai.app"
icon = ["assets/images/logo.icns", "assets/images/logo.png"]
category = "public.app-category.productivity"
short_description = "Voice-first prompt and writing assistant"
osx_info_plist_exts = ["assets/macos/info-plist-ext.xml"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2 = "0.6"
